# obdetect_icd

./: .gitignore  README.md  libtorch.ipynb  model_visualization.ipynb  quantization.ipynb  requirements.txt
config/: nanodet-plus-m_416.yml
demo/: demo.py
demo_libtorch/: CMakeLists.txt
model_visualization/: model
